--- a/src/components/EmployeeDetails/EmployeeDetails.css
+++ b/src/components/EmployeeDetails/EmployeeDetails.css
@@ -8,14 +8,14 @@
   
  
   .detailsContainerStyle {
-    border: 1px solid goldenrod; /* Change border color */
+    border: 2px solid goldenrod;
     border-radius: 15px;
     padding: 10px;
     background-color: #f9f9f9;
     box-shadow: 0 2px 5px rgba(6, 43, 166, 0.2);
     text-align: center;
+    width: 300px; /* Adjust the width as per your requirement */
   }
-  
   
   h1 {
     font-size: 28px;
