--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,62 +1,55 @@
-.login-center {
+
+body, html {
+    margin: 0;
+    padding: 0;
+}
+
+.login-body {
+
+    overflow: hidden;
+    background-image: url('../../time-sheet.png');
+    background-size: cover;
+    background-position: center;
+    background-size: 100% 100%;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
+    
 }
 
+
+
 .login-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center; /* Center content horizontally */
-    padding: 20px;
-    width: 300px;
     text-align: center;
-    border: 1px solid #ccc;
-    border-radius: 15px;
-    border-color: grey;
-    padding: 10px;
-    background-color: #f9f9f9;
-    box-shadow: 0 2px 5px rgba(6, 43, 166, 0.2);
+    padding: 20px;
 }
 
 .login-heading {
-    font-size: 24px;
+    font-size: 32px;
     margin-bottom: 20px;
 }
 
 .login-label {
     display: block;
-    text-align: left; /* Align labels to the left */
+    text-align: left;
     margin-bottom: 10px;
     font-weight: bold;
+    font-size: larger;
+   
 }
 
-.login-text {
-    display: flex;
+.login-text, .login-password {
     width: 95%;
     padding: 10px;
     margin-bottom: 20px;
-    margin-right: 5px; /* Add margin-right to move the text field to the left */
     border: 2px solid #ccc;
     border-radius: 4px;
     text-align: center;
-    border-color: grey;
-}
-
-.login-password[type="password"] {
-    display: flex;
-    width: 95%;
-    padding: 10px;
-    margin-bottom: 20px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    text-align: center;
-    border-color: gray;
 }
 
 .button-login {
-    background-color: gray;
+    background-color: lightseagreen;
     color: #fff;
     border: none;
     border-radius: 4px;
@@ -64,3 +57,7 @@
     font-size: 16px;
     cursor: pointer;
 }
+.thiran-tech-logo {
+    width: 60px; 
+    
+  }
