--- a/src/components/EmployeeList/EmployeeList.css
+++ b/src/components/EmployeeList/EmployeeList.css
@@ -49,13 +49,16 @@
   
 
   .employee-table th {
-    background-color: #f2f2f2;
+    background-color: silver;
     font-weight: bold;
   }
   
   
   .employee-table tr:nth-child(even) {
-    background-color: #f2f2f2;
+    background-color: lightgoldenrodyellow;
+  }
+  .employee-table tr:nth-child(odd) {
+    background-color: whitesmoke;
   }
   
   
