--- a/src/components/TimeTracking/TimeTracking.css
+++ b/src/components/TimeTracking/TimeTracking.css
@@ -13,7 +13,14 @@
     top: 10px; /* Adjust the top distance as needed */
   right: 10px;
 }
-
+.list1 {
+    background-color: silver; /* Set your desired background color */
+    margin: 0; /* Remove default body margin */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+  }
 /* Style the "Back" button */
 .back-button {
     background-color: black;
