--- a/src/components/TimeHistory/TimeHistory.css
+++ b/src/components/TimeHistory/TimeHistory.css
@@ -59,6 +59,13 @@ button {
   border: 1px solid #ccc;
   padding: 10px;
 }
+.list2 {
+  background-color: gainsboro; /* Set your desired background color */
+  margin: 0; /* Remove default body margin */
+
+ 
+  height: 100vh;
+}
 
 .back-button {
   background-color: black;
@@ -70,7 +77,7 @@ button {
   cursor: pointer;
   margin-right: 20px;
   position: absolute; /* Position the button absolutely within the container */
-  top: 10px; /* Adjust the top distance as needed */
+  top: 18px; /* Adjust the top distance as needed */
   right: 10px;
 }
 
