--- a/src/components/TimeTracking/TimeTracking.css
+++ b/src/components/TimeTracking/TimeTracking.css
@@ -13,14 +13,7 @@
     top: 10px; /* Adjust the top distance as needed */
   right: 10px;
 }
-.list1 {
-    background-color: silver; /* Set your desired background color */
-    margin: 0; /* Remove default body margin */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-  }
+
 /* Style the "Back" button */
 .back-button {
     background-color: black;
@@ -71,4 +64,11 @@ li {
     box-shadow: 0 2px 5px rgba(6, 43, 166, 0.2);
 }
 
-/* Add more styles as needed */
+.new {
+    background-color: silver; /* Set your desired background color */
+    margin: 0; /* Remove default body margin */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+  }
