--- a/src/components/EmployeeList/EmployeeList.css
+++ b/src/components/EmployeeList/EmployeeList.css
@@ -7,8 +7,8 @@
   }
   
   /* Title styles */
-  h2 {
-    font-size: 28px;
+  h3 {
+    font-size: 38px;
     margin: 0; /* Remove margin at the top */
     padding: 0; /* Remove padding at the top */
   }
@@ -71,15 +71,18 @@
     text-decoration: underline;
   }
   .logout-button1 {
-    margin-top: 10px;
-    padding: 10px 10px;
+    position: fixed;
+    right: 0px; /* Adjust the right value as needed */
+    top: 10px; /* Adjust the top value as needed */
     background-color: orangered;
     color: #fff;
     border: none;
-    border-radius: 5px;
+    border-radius: 3px;
     cursor: pointer;
-    margin-bottom: 20px;
     text-decoration: none;
-}
+    height: 35px;
+   
+  }
+  
   
   
