--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,3 +1,5 @@
+/* Login.css */
+
 body, html {
     margin: 0;
     padding: 0;
@@ -5,63 +7,99 @@ body, html {
 
 .login-body {
     overflow: hidden;
+    display: flex;
+    background-color: whitesmoke;
+}
+
+.login-left {
+    flex: 1;
     background-image: url('../../time-sheet.png');
     background-size: cover;
-    background-position: center;
-    background-size: 100% 100%;
+    position: relative;
+    width: 60%;
     height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 .login-container {
     text-align: center;
-    padding: 20px;
+    flex: 1;
+    display: flex;
+    align-items: center;
+}
+
+.login-right {
+    flex: 1;
+    text-align: center;
+    
 }
 
 .login-heading {
-    font-size: 30;
+    font-size: 20px;
     margin-bottom: 20px;
 }
+
 .log-heading {
-    font-size: 25px;
-    margin-bottom: 10px;
+    font-size: 30px;
+    margin-bottom: 20px;
+    text-align: center;
+    color:blue;
+    font-style: italic;
+    
 }
 
-/* New styles for grid container */
-.login-form-container {
-    display: grid;
-    grid-template-columns: 1fr;
-    gap: 10px;
+.log-heading1 {
+    font-size: 20px;
+    margin-bottom: 20px;
+    text-align: center;
+    color:black;
+    
 }
 
 .login-label {
-    text-align: left;
+    text-align: right;
     margin-bottom: 10px;
     font-weight: bold;
-    font-size: larger;
+  ;
+    color: black;
 }
 
-.login-text, .login-password {
-    width: 100%;
+.login-text,
+.login-password {
+    width: 70%;
     padding: 10px;
     border: 2px solid #ccc;
     border-radius: 4px;
-    text-align: center;
+    text-align: left;
 }
 
 .button-login {
     background-color: lightseagreen;
     color: #fff;
     border: none;
-    border-radius: 4px;
+    border-radius: 3px;
     padding: 10px 20px;
-    font-size: 16px;
+    font-size: 12px;
     cursor: pointer;
+    width: 50%;
 }
 
-/* .thiran-tech-logo {
-    width: 150px;
-    margin-bottom: 10px;
-} */
+/* Additional styles for input groups */
+.input-group {
+    margin-bottom: 20px;
+}
+
+.input-group label {
+    display: block;
+    margin-bottom: 5px;
+    color: black;
+    text-align: center;
+    font-size: medium;
+}
+
+.input-group input {
+    width: 50%;
+    padding: 8px;
+    box-sizing: border-box;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+}
