--- a/src/components/TimeHistory/TimeHistory.css
+++ b/src/components/TimeHistory/TimeHistory.css
@@ -18,11 +18,7 @@
 }
 
 /* Style the label and input/select elements */
-label {
-  display: block;
-  margin: 10px 0;
-  font-weight: bold;
-}
+
 
 select,
 input,
@@ -32,11 +28,11 @@ button {
   border-radius: 4px;
   margin-right: 10px;
   
-}
+} 
 
-button {
+.li-button {
   background-color: #007bff;
-  color: #fff;
+  color:  #007bff;
   border: none;
   cursor: pointer;
   
