--- a/src/components/AdminDashboard/AdminDashboard.css
+++ b/src/components/AdminDashboard/AdminDashboard.css
@@ -1,20 +1,22 @@
+/* AdminDashboard.css */
 
-  .h1-pro {
-    margin: 0;
-  padding: 0;
-  position: absolute;
-   top: 0;
-  left: 50%;
-  transform: translateX(-50%);
-  }
-  .login-body1 {
-    overflow: hidden;
-    background-image: url('../../need-employee-timesheet-management-background-imag-upscaled\ \(2\).png');
-    background-size: cover;
-    background-position: center;
-    background-size: 100% 100%;
-    height: 100vh;
+.header {
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 10px;
     display: flex;
-    justify-content: center;
     align-items: center;
+    background-color: lightgoldenrodyellow;
+}
+
+.logout-button {
+    background-color: orangered;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    margin-left: auto; /* This will push the button to the right */
 }
