--- a/src/components/TimeTracking/TimeTracking.css
+++ b/src/components/TimeTracking/TimeTracking.css
@@ -24,6 +24,7 @@
     font-size: 16px;
     cursor: pointer;
     margin-right: 20px;
+    margin-top: 60px;
 }
 
 .logout-button {
@@ -64,11 +65,33 @@ li {
     box-shadow: 0 2px 5px rgba(6, 43, 166, 0.2);
 }
 
-.new {
-    background-color: silver; /* Set your desired background color */
-    margin: 0; /* Remove default body margin */
+/* .new {
+    background-color: silver; 
+    margin: 0; 
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
+  } */
+  header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+    background-color: lightgoldenrodyellow;
+    height: 60px; 
   }
+  table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 20px;
+}
+
+
+
+th, td {
+    border: 1px solid #ccc;
+    padding: 10px;
+    text-align: center;
+}
+
