--- a/src/components/AddUserForm/AddUserForm.css
+++ b/src/components/AddUserForm/AddUserForm.css
@@ -4,7 +4,14 @@
     margin: 0; /* Remove default margin */
     padding: 0; /* Remove default padding */
   }
-  
+  header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+    background-color: lightgoldenrodyellow;
+    height: 60px; 
+  }
 .user-form-container {
     max-width: 400px;
     margin: auto;
@@ -53,16 +60,4 @@
   .now-button:hover:hover {
     background-color: #45a049;
   }
-  .back-button {
-    background-color: black;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
-    padding: 10px 20px;
-    font-size: 16px;
-    cursor: pointer;
-    margin-right: 20px;
-    position: absolute; /* Position the button absolutely within the container */
-    top: 18px; /* Adjust the top distance as needed */
-    right: 10px;
-  }
+ 
