--- a/src/components/EmployeeList/EmployeeList.css
+++ b/src/components/EmployeeList/EmployeeList.css
@@ -17,21 +17,11 @@ h2 {
 }
 
 /* Logout button styles */
-.logout-button {
-  background-color: orangered;
-  color: #fff;
-  border: none;
-  border-radius: 3px;
-  cursor: pointer;
-  text-decoration: none;
-  height: 35px;
-}
+
 .employee-container{
   /* background-color: lightsteelblue; */
 }
-.logout-button:hover {
-  background-color: #ff6347;
-}
+
 
 /* Employee cards styles */
 .employee-cards {
@@ -42,13 +32,17 @@ h2 {
 }
 
 /* Card styles */
+.log{
+  
+  background-color: lightgoldenrodyellow;
+}
 .card {
   width: 250px;
   margin: 10px;
   padding: 15px;
-  border: 2px solid #ccc;
+  border: 2px solid ;
   border-radius: 15px;
-  background-color: #fff;
+
   border-color: goldenrod;
   position: relative;
 }
@@ -75,20 +69,20 @@ h2 {
 }
 /* Delete button styles */
 .card button {
-  background-color: #dc3545;
-  color: #fff;
+
+
   border: none;
-  border-radius: 3px;
+ background-color: white;
   cursor: pointer;
   padding: 8px;
   position: absolute;
   top: 10px; /* Adjust as needed */
   right: 10px; /* Adjust as needed */
 }
-
+/* 
 .card button:hover {
   background-color: #c82333;
-}
+} */
 
 
 /* Navigation arrows styles */
