--- a/src/components/TimeHistory/TimeHistory.css
+++ b/src/components/TimeHistory/TimeHistory.css
@@ -46,12 +46,18 @@ header {
 
 /* Additional styling for the back button */
 .back-button {
-  background-color: #ff9800;
+  background-color: white;
   color: white;
-  padding: 10px 15px;
   border: none;
-  border-radius: 5px;
+  border-color: black;
+  border-radius: 3px;
+  padding: 10px 10px;
+  font-size: 16px;
   cursor: pointer;
+  margin-right: 20px;
+  position: absolute; /* Position the button absolutely within the container */
+  top: 18px; /* Adjust the top distance as needed */
+  right: 10px;
 }
 
 
