--- a/src/components/TimeTracking/TimeTracking.css
+++ b/src/components/TimeTracking/TimeTracking.css
@@ -5,8 +5,8 @@
     background-color: #007bff;
     color: #fff;
     border: none;
-    border-radius: 4px;
-    padding: 10px 20px;
+    border-radius: 2px;
+    padding: 10px 10px;
     font-size: 16px;
     cursor: pointer;
     margin-right: 20px;
@@ -16,7 +16,7 @@
 
 /* Style the "Back" button */
 .back-button {
-    background-color: black;
+    background-color: white;
     color: #fff;
     border: none;
     border-radius: 4px;
@@ -27,18 +27,7 @@
     margin-top: 60px;
 }
 
-.logout-button {
-    background-color: orangered;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
-    padding: 10px 20px;
-    font-size: 16px;
-    cursor: pointer;
-    margin-right: 20px;
-    top: 10px; /* Adjust the top distance as needed */
-  right: 10px;
-}
+
 
 /* Style the Time Records section */
 .tracking {
