--- a/src/components/AddUserForm/AddUserForm.css
+++ b/src/components/AddUserForm/AddUserForm.css
@@ -9,7 +9,7 @@
     justify-content: space-between;
     align-items: center;
     margin-bottom: 20px;
-    background-color: lightgoldenrodyellow;
+    background-color: palegoldenrod;
     height: 60px; 
   }
 .user-form-container {
@@ -60,4 +60,17 @@
   .now-button:hover:hover {
     background-color: #45a049;
   }
- 
+  .back-button {
+  background-color: white;
+  color: white;
+  border: none;
+  border-color: black;
+  border-radius: 3px;
+  padding: 10px 10px;
+  font-size: 16px;
+  cursor: pointer;
+  margin-right: 20px;
+  position: absolute; /* Position the button absolutely within the container */
+  top: 18px; /* Adjust the top distance as needed */
+  right: 10px;
+}
