--- a/src/components/AdminDashboard/AdminDashboard.css
+++ b/src/components/AdminDashboard/AdminDashboard.css
@@ -7,7 +7,7 @@
     padding: 10px;
     display: flex;
     align-items: center;
-    background-color: palegoldenrod;
+    background-color: lightgoldenrodyellow;
 }
 .body-full {
     margin: 0;
