--- a/src/components/TimeHistory/TimeHistory.css
+++ b/src/components/TimeHistory/TimeHistory.css
@@ -37,7 +37,7 @@
 .header2 {
   width: 100%;
   text-align: center;
-  background-color: #A05F43;
+  background-color: #948078;
 }
 
 /* Additional styling for the back button */
