--- a/src/components/TimeTracking/TimeTracking.css
+++ b/src/components/TimeTracking/TimeTracking.css
@@ -62,7 +62,7 @@ li {
     align-items: center;
     height: 100vh;
   } */
-  header {
+  .header-add {
     display: flex;
     justify-content: space-between;
     align-items: center;
