--- a/src/components/EmployeeList/EmployeeList.css
+++ b/src/components/EmployeeList/EmployeeList.css
@@ -6,7 +6,7 @@ header {
   justify-content: space-between;
   align-items: center;
   margin-bottom: 20px;
-  background-color: lightgoldenrodyellow;
+  background-color: linen;
   height: 60px; 
 }
 
