--- a/src/components/AddUserForm/AddUserForm.css
+++ b/src/components/AddUserForm/AddUserForm.css
@@ -16,7 +16,7 @@
     max-width: 400px;
     margin: auto;
     padding: 20px;
-    border: 1px solid #ccc;
+    border: 1px solid black;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   }
@@ -42,7 +42,7 @@
   .now-input {
     padding: 8px;
     margin-bottom: 16px;
-    border: 1px solid #ccc;
+    border: 1px solid black;
     border-radius: 4px;
   }
   
