--- a/src/components/TimeHistory/TimeHistory.css
+++ b/src/components/TimeHistory/TimeHistory.css
@@ -114,4 +114,12 @@ th, td {
   right: 10px;
   
 }
-/* ... other styles ... */
+.button-his-load {
+  background-color:black;
+  color: white;
+  padding: 15px 15px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-bottom: 15px; 
+}
